feat: updated lint to remove no-console

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,6 +23,7 @@
         "react"
     ],
     "rules": {
+        "no-console":"off",
         "jsx-a11y/href-no-hash": ["off"],
         "react/jsx-filename-extension": ["warn", { "extensions": [".js", ".jsx"] }],
         "max-len": [
