--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,9 @@
 {
   "printWidth": 120,
-  "trailingComma": "es5",
+  "trailingComma": "none",
   "singleQuote": true,
-  "tabWidth": 2
+  "tabWidth": 2,
+  "useTabs": false,
+  "bracketSpacing": true,
+  "arrowParens": "avoid"
 }
