--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "eject": "react-scripts eject",
     "lint": "eslint --fix --ext js,jsx src"
   },
-  "eslintConfig": {
-    "extends": "react-app"
+  "xo": {
+    "prettier": true
   },
   "browserslist": {
     "production": [
@@ -44,8 +44,9 @@
   "devDependencies": {
     "babel-eslint": "^10.1.0",
     "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.1.0",
     "eslint-config-prettier": "^6.10.1",
+    "eslint-config-xo": "^0.29.1",
+    "eslint-config-xo-react": "^0.23.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.3",
