--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.1",
+    "react-grid-layout": "^0.18.3",
     "react-instantsearch-dom": "^6.4.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
