--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-instantsearch-dom": "^6.4.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-uwp": "^1.3.1",
     "redux": "^4.0.5"
   },
   "scripts": {
