--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-scripts": "3.4.1",
     "react-uwp": "^1.3.1",
     "redux": "^4.0.5",
+    "shortid": "^2.2.15",
     "socket.io-client": "^2.3.0"
   },
   "scripts": {
