--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-export-default-from": "^7.8.3",
+    "@types/react-redux": "^7.1.9",
+    "@types/redux-logger": "^3.0.7",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.1",
@@ -60,6 +62,8 @@
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.1",
     "prettier": "^2.0.4",
+    "react-redux": "^7.2.0",
+    "redux-logger": "^3.0.6",
     "typescript": "^3.8.3"
   }
 }
