--- a/.prettierrc
+++ b/.prettierrc
@@ -5,5 +5,6 @@
   "tabWidth": 2,
   "useTabs": false,
   "bracketSpacing": true,
-  "arrowParens": "avoid"
+  "arrowParens": "avoid",
+  "jsxBracketSameLine": false
 }
