--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react-grid-layout": "^0.18.3",
     "react-instantsearch-dom": "^6.4.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.3",
     "react-uwp": "^1.3.1",
     "redux": "^4.0.5",
     "shortid": "^2.2.15",
