--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "fifa",
   "version": "1.1.0",
   "engines": {
-    "node": "12.x.x"
+    "node": ">=12.x.x"
   },
   "private": true,
   "dependencies": {
@@ -13,6 +13,7 @@
     "algoliasearch": "4.8.5",
     "axios": "0.21.1",
     "bootstrap": "4.6.0",
+    "clsx": "^1.1.1",
     "jquery": "3.5.1",
     "js-cookie": "2.2.1",
     "prop-types": "15.7.2",
